--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,8 +8,6 @@
 			href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@700&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Smooch&display=swap"
 			rel="stylesheet"
@@ -35,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>React App</title>
+		<title>Notesy</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
